Changed Ladder/counter module, commented knob

--- a/Soft_Cabling.ucf
+++ b/Soft_Cabling.ucf
@@ -20,6 +20,7 @@ NET "SW<3>"         LOC = "T9"  | IOSTANDARD = LVCMOS33 ;
 
 NET "BTN_SOUTH" LOC = "T15"  | IOSTANDARD = LVCMOS33 | PULLDOWN ;
 NET "BTN_EAST"	LOC = "T16"  | IOSTANDARD = LVCMOS33 | PULLDOWN ;
+NET "BTN_NORTH"	LOC = "T14"  | IOSTANDARD = LVCMOS33 | PULLDOWN ;
 
 NET "LCD_DB<0>"	LOC = "Y13"  | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = SLOW ;
 NET "LCD_DB<1>"	LOC = "AB18" | IOSTANDARD = LVCMOS33 | DRIVE = 8 | SLEW = SLOW ;
